backend/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: almonds-api
  labels:
    app: almonds-api
    component: backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: almonds-api
---
apiVersion: v1
kind: Service
metadata:
  name: almonds-api-headless
  labels:
    app: almonds-api
    component: backend
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: almonds-api
